--- a/.env
+++ b/.env
@@ -1,14 +1,22 @@
 # Config for PHP Server
 
+# Route Path
+
+[Result]
+# Return status result
+status = /\/api/
+
+# SQL
+
 [SQLite]
 driver = pdo_sqlite
 [MySQL]
-dbname = 
+dbname = develop
 ; Username to use when connecting to the database.
-user = 
-password = 
-host = 
-port = 
+user = develop
+password = develop
+host = 127.0.0.1
+port = 3306
 unix_socket = 
 ; The charset used when connecting to the database.
 charset = 
