--- a/.htaccess
+++ b/.htaccess
@@ -3,10 +3,6 @@ Header always set Access-Control-Allow-Origin "*"
 Header always set Access-Control-Allow-Credentials "true"
 Header always set Access-Control-Allow-Headers "content-type,Authorization,Cache-Control,X-Requested-With, X-XSRF-TOKEN"
 
-<IfModule mod_rewrite.c>
- RewriteEngine on
- RewriteBase /
- RewriteCond %{REQUEST_FILENAME} !-d
- RewriteCond %{REQUEST_FILENAME} !-f
- RewriteRule ^(.*)$ index.php?/$1 [QSA,PT,L]
-</IfModule>
+if (!-e $request_filename) {
+        rewrite ^(.*)$ /index.php$1 last;
+    }
