--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ host = 127.0.0.1
 port = 3306
 unix_socket = 
 ; The charset used when connecting to the database.
-charset = 
+charset = utf8
 driver = pdo_mysql
 [Oracle]
 driver = pdo_oci
